@@ -140,7 +140,7 @@ main(int argc, const char *argv[], char *env[])
   e = [[project targets] objectEnumerator];
   while ( (target = [e nextObject]) )
     {
-      NSEnumerator *f = nil;
+      NSEnumerator *f = [projectDirEntries objectEnumerator];
       NSString   *projectDirEntry;
       NSString   *makefile;
       NSString   *newTName = [[target targetName] stringByReplacingString: @" "
@@ -149,98 +149,41 @@ main(int argc, const char *argv[], char *env[])
 	[pbxbuildDir stringByAppendingPathComponent:
 		       [newTName
 			 stringByAppendingPathExtension: [target targetType]]];
-      NSDictionary *sourceDict = [target sources];
-      NSMutableArray *sources = [NSMutableArray arrayWithCapacity: 50];
-
-      [sources addObjectsFromArray: [sourceDict objectForKey: @"m"]];
-      [sources addObjectsFromArray: [sourceDict objectForKey: @"c"]];
-      [sources addObjectsFromArray: [sourceDict objectForKey: @"cpp"]];
-      [sources addObjectsFromArray: [target headers]];
-      [sources addObjectsFromArray: [target resources]];
-      [sources addObjectsFromArray: [target localizedResources]];
-      f = [sources objectEnumerator];
-
-      [fileManager createDirectoryAtPath: targetDir 
-		   withIntermediateDirectories: YES
-		   attributes: nil
-		   error: NULL];
+      [fileManager createDirectoryAtPath: targetDir attributes: nil];
       
       // link all dir entries of the project directory into the target dir
-      while ((projectDirEntry = [f nextObject]) != nil) 
+      while ( (projectDirEntry = [f nextObject]) ) 
 	{
-	  NSEnumerator *h = nil;
-	  NSString *source = 
-	    [projectDir stringByAppendingPathComponent: projectDirEntry];
 	  NSString *destination = 
 	    [targetDir stringByAppendingPathComponent: projectDirEntry];
-	  NSString *destDir = [destination stringByDeletingLastPathComponent];
-	  NSString *srcDir = [source stringByDeletingLastPathComponent];
-	  NSArray *files = [fileManager directoryContentsAtPath: srcDir];
-	  NSString *file = nil;
-
-	  // Create any directories which might be in mentioned in the entry.
-	  [fileManager createDirectoryAtPath: destDir
-		       withIntermediateDirectories: YES
-		       attributes: nil
-		       error: NULL];
-
-	  // iterate over all of the headers to copy them...
-	  h = [files objectEnumerator];
-	  while ((file = [h nextObject]) != nil)
-	    {
-	      if([[file pathExtension] isEqual: @"h"])
-		{
-		  NSString *src = [srcDir stringByAppendingPathComponent: file];
-		  NSString *dst = [destDir stringByAppendingPathComponent: file];
-
-#ifndef __MINGW32__
-		  if(args_info.symbolic_links_given)
-		    {
-		      [fileManager createSymbolicLinkAtPath: dst
-				   pathContent: src];
-		    }
-		  else
-		    {
-		      [fileManager copyPath: src
-				   toPath: dst
-				   handler: nil];
-		    }
-#else
-		  [fileManager copyPath: src
-			       toPath: dst
-			       handler: nil];
-#endif
-		}
-	    }
 
 	  // skip existing GNUmakefiles
 	  if ([projectDirEntry hasPrefix: @"GNUmakefile"])
 	    continue;
 					       
-	  NSDebugLog(@"Copying from '%@' to '%@'", 
-		     source,
-		     destination);
-
-#ifndef __MINGW32__
-	  if(args_info.symbolic_links_given)
-	    {
-	      [fileManager createSymbolicLinkAtPath: destination
-			   pathContent: source];
-	    }
-	  else
-	    {
-	      [fileManager copyPath: source
-			   toPath: destination
-			   handler: nil];
-	    }
+#ifdef __MINGW32__
+	  {
+	    NSString *source = 
+	      [projectDir stringByAppendingPathComponent: projectDirEntry];
+	    NSDebugLog(@"Copying from '%@' to '%@'", 
+		  source,
+		  destination);
+	    [fileManager copyPath: source
+			 toPath: destination
+			 handler: nil];
+	  }
 #else
-	  [fileManager copyPath: source
-		       toPath: destination
-		       handler: nil];
+	  {
+	    NSString *source = 
+	      [@"../../"  stringByAppendingPathComponent: projectDirEntry];
+	    NSDebugLog(@"Creating symbolic link from '%@' to '%@'", 
+		       source,
+		       destination);
+	    [fileManager createSymbolicLinkAtPath: destination
+			 pathContent: source];
+	  }
 #endif
 	}
-
-
 
       // generate and write makefile
       makefile = [makefileGenerator generateMakefileForTarget: target];
